Migração do projeto para o intellij